Forgot Password Functional

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,6 +5,7 @@
     <string name="dashboard">Dashboard</string>
     <string name="make_don">Make a Donation</string>
     <string name="your_don">Your Donations</string>
+    <string name="forg_pass">Enter your email below to recieve a \n password reset link</string>
     <string name="donation_desc">We have 15 food packets  for pickup in Banilad Location \n before 1:30 PM</string>
     <string name="aboutUs">Lorem ipsum dolor sit amet, cons
 ectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
